--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ buildscript {
 }
 
 group = 'com.brandingbrand'
-version = '0.1-SNAPSHOT'
+version = '1.0'
 description = 'Gradle build plugin for Brandingbrand Android Apps'
 
 uploadArchives {
