--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
     compile 'com.android.tools.build:gradle:1.0.0' // android plugin
-    compile 'org.ajoberstar:gradle-git:0.13.0' // git plugin
     compile 'de.felixschulze.gradle:gradle-hockeyapp-plugin:3.0' // hockeyapp plugin
 }
 
@@ -25,12 +24,12 @@ buildscript {
 }
 
 group = 'com.brandingbrand'
-version = '1.1'
+version = '1.2'
 description = 'Gradle build plugin for Brandingbrand Android Apps'
 
 // make sure we are building with Java 1.7 as
-// some machines could be using Java 1.8 (typically)
-// for libraries such as RetroLambda
+// some machines could be using Java 1.8 (typically
+// for libraries such as RetroLambda)
 //
 // This enables the java compiling process to work
 // independently of the system/machine configuration
